--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,26 @@
 {
+    "version": 2,
+    "builds": [
+      {
+        "src": "frontend/package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "build" 
+        }
+      },
+      {
+        "src": "backend/server.js",
+        "use": "@vercel/node"
+      }
+    ],
     "routes": [
       {
+        "src": "/api/(.*)",
+        "dest": "backend/server.js"
+      },
+      {
         "src": "/.*",
-        "dest": "/index.html"
+        "dest": "frontend/index.html"
       }
     ]
   }
